--- a/public/views/index.html
+++ b/public/views/index.html
@@ -7,9 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet" />
-    <link rel="icon" href="../public/img/logo-mercado-liebre.svg" />
+    <link rel="icon" href="../img/logo-mercado-liebre.svg" />
     <script src="https://kit.fontawesome.com/971bd64f71.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/styleIndex.css" />
+    <link rel="stylesheet" href="../css/styleIndex.css" />
     <title>Home - Mercado Liebre</title>
   </head>
   <body>
