--- a/src/views/index.html
+++ b/src/views/index.html
@@ -7,16 +7,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet" />
-    <link rel="icon" href="../img/logo-mercado-liebre.svg" />
+    <link rel="icon" href="/public/img/logo-mercado-liebre.svg" />
     <script src="https://kit.fontawesome.com/971bd64f71.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/styleIndex.css" />
+    <link rel="stylesheet" href="/public/css/styleIndex.css" />
     <title>Home - Mercado Liebre</title>
   </head>
   <body>
     <header>
       <div class="header-log-bar">
         <div class="logo">
-          <img src="../img/logo-mercado-liebre.svg" alt="Logo Mercado Liebre" />
+          <img src="/public/img/logo-mercado-liebre.svg" alt="Logo Mercado Liebre" />
         </div>
 
         <div class="search-bar">
@@ -74,14 +74,14 @@
     </header>
 
     <section class="banner-img-ml">
-      <img src="../img/img-home-banner.jpg" alt="" />
+      <img src="/public/img/img-home-banner.jpg" alt="" />
     </section>
 
     <main>
       <h3 class="pov-msg">Basado en tu última visita</h3>
       <section class="based-on-pov">
         <article class="productos">
-          <img src="../img/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex" />
+          <img src="/public/img/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex" />
           <div class="box-article">
             <div class="icon-truck">
               <i class="fa-solid fa-truck"></i>
@@ -95,7 +95,7 @@
         </article>
 
         <article class="productos">
-          <img src="../img/img-macbook-pro-2019.jpg" alt="MacBook Pro 2019" />
+          <img src="/public/img/img-macbook-pro-2019.jpg" alt="MacBook Pro 2019" />
           <div class="box-article">
             <div class="icon-truck">
               <i class="fa-solid fa-truck"></i>
@@ -109,7 +109,7 @@
         </article>
 
         <article class="productos">
-          <img src="../img/img-samsung-galaxy-s10.jpg" alt="Cafetera Moulinex" />
+          <img src="/public/img/img-samsung-galaxy-s10.jpg" alt="Cafetera Moulinex" />
           <div class="box-article">
             <div class="icon-truck">
               <i class="fa-solid fa-truck"></i>
@@ -123,7 +123,7 @@
         </article>
 
         <article class="productos">
-          <img src="../img/img-tv-samsung-smart.jpg" alt="SmartTv Samsung 43" />
+          <img src="/public/img/img-tv-samsung-smart.jpg" alt="SmartTv Samsung 43" />
           <div class="box-article">
             <div class="icon-truck">
               <i class="fa-solid fa-truck"></i>
@@ -140,7 +140,7 @@
       <h3 class="offerts-msg">Ofertas</h3>
       <section class="section-offerts">
         <article class="productos">
-          <img src="../img/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex" />
+          <img src="/public/img/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex" />
           <div class="box-article">
             <div class="icon-truck">
               <i class="fa-solid fa-truck"></i>
@@ -154,7 +154,7 @@
         </article>
 
         <article class="productos">
-          <img src="../img/img-macbook-pro-2019.jpg" alt="MacBook Pro 2019" />
+          <img src="/public/img/img-macbook-pro-2019.jpg" alt="MacBook Pro 2019" />
           <div class="box-article">
             <div class="icon-truck">
               <i class="fa-solid fa-truck"></i>
@@ -168,7 +168,7 @@
         </article>
 
         <article class="productos">
-          <img src="../img/img-samsung-galaxy-s10.jpg" alt="Cafetera Moulinex" />
+          <img src="/public/img/img-samsung-galaxy-s10.jpg" alt="Cafetera Moulinex" />
           <div class="box-article">
             <div class="icon-truck">
               <i class="fa-solid fa-truck"></i>
@@ -182,7 +182,7 @@
         </article>
 
         <article class="productos">
-          <img src="../img/img-tv-samsung-smart.jpg" alt="SmartTv Samsung 43" />
+          <img src="/public/img/img-tv-samsung-smart.jpg" alt="SmartTv Samsung 43" />
           <div class="box-article">
             <div class="icon-truck">
               <i class="fa-solid fa-truck"></i>
