--- a/src/views/login.html
+++ b/src/views/login.html
@@ -34,7 +34,7 @@
             <div class="search-bar">
                     <form class="search-form" action="/search" method="get">
                             <label for="search-label">
-                                <input class="search-input" type="text" name="q" placeholder="Buscar...">
+                                <input class="search-input" type="text" name="analia" placeholder="Buscar?...">
                             </label>
                         <button class="search-button" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
                     </form>
