--- a/public/css/styleLogin.css
+++ b/public/css/styleLogin.css
@@ -173,7 +173,7 @@ footer{
     box-shadow: 0 0 2.5px rgb(100, 100, 100);
 }
 
-#bday-form{
+#nacform{
     width: 550px;
     height: 40px;
     font-size: 16px;
