--- a/src/views/login.html
+++ b/src/views/login.html
@@ -13,7 +13,7 @@
 
             <script src="https://kit.fontawesome.com/971bd64f71.js" crossorigin="anonymous"></script>
 
-            <link rel="stylesheet" href="../public/css/styleLogin.css">
+            <link rel="stylesheet" href="/public/css/styleLogin.css">
 
 
     <title>Login - Mercado Liebre</title>
