--- a/src/views/register.html
+++ b/src/views/register.html
@@ -15,7 +15,7 @@
 
             <script src="https://kit.fontawesome.com/971bd64f71.js" crossorigin="anonymous"></script>
 
-            <link rel="stylesheet" href="../public/css/styleRegister.css">
+            <link rel="stylesheet" href="/public/css/styleRegister.css">
 
 
     <title>Registración - Mercado Liebre</title>
@@ -91,7 +91,7 @@
             <div class="birthday-msg">
                 <label for="" class="bday-label">Fecha de nacimiento</label>
             </div>
-            <input type="date" id="bday-form" name="bd-form">
+            <input type="date" id="nacform" name="bd-form">
         </div>
 
         <div class="adress-form-box">
