--- a/src/views/register.html
+++ b/src/views/register.html
@@ -26,7 +26,7 @@
 
         <div class="header-log-bar">
             <div class="logo">
-                <img src="../public/img/logo-mercado-liebre.svg" alt="Logo Mercado Liebre">
+                <img src="/public/img/logo-mercado-liebre.svg" alt="Logo Mercado Liebre">
             </div>
             
 
