--- a/src/views/login.html
+++ b/src/views/login.html
@@ -26,8 +26,11 @@
 
         <div class="header-log-bar">
             <div class="logo">
-                <img src="/public/img/logo-mercado-liebre.svg" alt="Logo Mercado Liebre">
+                <a href="/src/views/index.html">
+                    <img src="/public/img/logo-mercado-liebre.svg" alt="Logo Mercado Liebre">
+                </a>
             </div>
+            
             
 
 
