--- a/src/views/register.html
+++ b/src/views/register.html
@@ -26,7 +26,7 @@
 
         <div class="header-log-bar">
             <div class="logo">
-                <a href="./index.html"> <
+                <a href="./index.html"> 
                     <img src="/public/img/logo-mercado-liebre.svg" alt="Logo Mercado Liebre">
                 </a>
             </div>
